--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.smallstone</groupId>
-    <artifactId>springboot-mall</artifactId>
+    <artifactId>springbootmall</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-mall</name>
+    <name>springbootmall</name>
     <description>Spring Boot Mall project</description>
     <properties>
         <java.version>11</java.version>
