--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,5 +3,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=sa
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
 spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.date-format=YYYY-MM-dd HH:mm:ss
