--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:8080/postgres-demo
-spring.datasource.username=pgAdmin
-spring.datasource.password=!QAZ2wsxaa
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=Hongkong&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
-Server.port=5000
-app.version=1.0.0
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
