--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+	    
+	    <dependency>
+<groupId>org.apache.tomcat.embed</groupId>
+<artifactId>tomcat-embed-jasper</artifactId>
+</dependency>
 
+	    <dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-jetty</artifactId>
+</dependency>
+	    
+	    <dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-undertow</artifactId>
+</dependency>
+	    
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
