--- a/pom.xml
+++ b/pom.xml
@@ -67,17 +67,26 @@
                 </exclusion>
             </exclusions>
         </dependency>
+	    
+	    <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.22</version>
+        </dependency>
+	    
     </dependencies>
+	
+	<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-		    <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-                    </configuration>
             </plugin>
         </plugins>
     </build>
