--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>springboot-mall</name>
     <description>Spring Boot Mall project</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version8</java.version>
     </properties>
     <dependencies>
         <dependency>
