--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.path=/h2
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=YYYY-MM-dd HH:mm:ss
+
+server.error.whitelabel.enabled=false
