--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=${DB_URL}
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=pgAdmin
+spring.datasource.password=!QAZ2wsxaa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
